; ModuleID = '/home/carl/AnghaBench/i3/src/extr_load_layout.c_json_int.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_load_layout.c_json_int.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i64, i64, i64, i64, i64, i64, %struct.TYPE_5__, %struct.TYPE_6__, %struct.TYPE_6__, %struct.TYPE_6__ }
%struct.TYPE_5__ = type { i64, i64, i64, i64, i64 }
%struct.TYPE_6__ = type { i64, i64, i64, i64 }
%struct.TYPE_8__ = type { i64, i64, i64 }
%struct.focus_mapping = type { i64 }

@.str = private unnamed_addr constant [21 x i8] c"int %lld for key %s\0A\00", align 1
@last_key = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [5 x i8] c"type\00", align 1
@json_node = common dso_local global %struct.TYPE_7__* null, align 8
@.str.2 = private unnamed_addr constant [16 x i8] c"fullscreen_mode\00", align 1
@.str.3 = private unnamed_addr constant [4 x i8] c"num\00", align 1
@.str.4 = private unnamed_addr constant [21 x i8] c"current_border_width\00", align 1
@.str.5 = private unnamed_addr constant [6 x i8] c"depth\00", align 1
@parsing_swallows = common dso_local global i64 0, align 8
@.str.6 = private unnamed_addr constant [3 x i8] c"id\00", align 1
@parsing_focus = common dso_local global i64 0, align 8
@focus_mappings = common dso_local global i32 0, align 4
@parsing_rect = common dso_local global i64 0, align 8
@parsing_window_rect = common dso_local global i64 0, align 8
@parsing_geometry = common dso_local global i64 0, align 8
@.str.7 = private unnamed_addr constant [2 x i8] c"x\00", align 1
@.str.8 = private unnamed_addr constant [2 x i8] c"y\00", align 1
@.str.9 = private unnamed_addr constant [6 x i8] c"width\00", align 1
@.str.10 = private unnamed_addr constant [7 x i8] c"height\00", align 1
@.str.11 = private unnamed_addr constant [33 x i8] c"WARNING: unknown key %s in rect\0A\00", align 1
@.str.12 = private unnamed_addr constant [28 x i8] c"rect now: (%d, %d, %d, %d)\0A\00", align 1
@current_swallow = common dso_local global %struct.TYPE_8__* null, align 8
@swallow_is_empty = common dso_local global i32 0, align 4
@.str.13 = private unnamed_addr constant [5 x i8] c"dock\00", align 1
@.str.14 = private unnamed_addr constant [13 x i8] c"insert_where\00", align 1
@parsing_gaps = common dso_local global i64 0, align 8
@.str.15 = private unnamed_addr constant [6 x i8] c"inner\00", align 1
@.str.16 = private unnamed_addr constant [4 x i8] c"top\00", align 1
@.str.17 = private unnamed_addr constant [6 x i8] c"right\00", align 1
@.str.18 = private unnamed_addr constant [7 x i8] c"bottom\00", align 1
@.str.19 = private unnamed_addr constant [5 x i8] c"left\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i64)* @json_int to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @json_int(i8* %0, i64 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i64, align 8
  %5 = alloca %struct.focus_mapping*, align 8
  %6 = alloca %struct.TYPE_6__*, align 8
  store i8* %0, i8** %3, align 8
  store i64 %1, i64* %4, align 8
  %7 = load i64, i64* %4, align 8
  %8 = load i32, i32* @last_key, align 4
  %9 = call i32 @LOG(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i64 %7, i32 %8)
  %10 = load i32, i32* @last_key, align 4
  %11 = call i64 @strcasecmp(i32 %10, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.1, i64 0, i64 0))
  %12 = icmp eq i64 %11, 0
  br i1 %12, label %13, label %17

13:                                               ; preds = %2
  %14 = load i64, i64* %4, align 8
  %15 = load %struct.TYPE_7__*, %struct.TYPE_7__** @json_node, align 8
  %16 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %15, i32 0, i32 0
  store i64 %14, i64* %16, align 8
  br label %17

17:                                               ; preds = %13, %2
  %18 = load i32, i32* @last_key, align 4
  %19 = call i64 @strcasecmp(i32 %18, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.2, i64 0, i64 0))
  %20 = icmp eq i64 %19, 0
  br i1 %20, label %21, label %25

21:                                               ; preds = %17
  %22 = load i64, i64* %4, align 8
  %23 = load %struct.TYPE_7__*, %struct.TYPE_7__** @json_node, align 8
  %24 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %23, i32 0, i32 1
  store i64 %22, i64* %24, align 8
  br label %25

25:                                               ; preds = %21, %17
  %26 = load i32, i32* @last_key, align 4
  %27 = call i64 @strcasecmp(i32 %26, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.3, i64 0, i64 0))
  %28 = icmp eq i64 %27, 0
  br i1 %28, label %29, label %33

29:                                               ; preds = %25
  %30 = load i64, i64* %4, align 8
  %31 = load %struct.TYPE_7__*, %struct.TYPE_7__** @json_node, align 8
  %32 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %31, i32 0, i32 2
  store i64 %30, i64* %32, align 8
  br label %33

33:                                               ; preds = %29, %25
  %34 = load i32, i32* @last_key, align 4
  %35 = call i64 @strcasecmp(i32 %34, i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str.4, i64 0, i64 0))
  %36 = icmp eq i64 %35, 0
  br i1 %36, label %37, label %41

37:                                               ; preds = %33
  %38 = load i64, i64* %4, align 8
  %39 = load %struct.TYPE_7__*, %struct.TYPE_7__** @json_node, align 8
  %40 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %39, i32 0, i32 3
  store i64 %38, i64* %40, align 8
  br label %41

41:                                               ; preds = %37, %33
  %42 = load i32, i32* @last_key, align 4
  %43 = call i64 @strcasecmp(i32 %42, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.5, i64 0, i64 0))
  %44 = icmp eq i64 %43, 0
  br i1 %44, label %45, label %49

45:                                               ; preds = %41
  %46 = load i64, i64* %4, align 8
  %47 = load %struct.TYPE_7__*, %struct.TYPE_7__** @json_node, align 8
  %48 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %47, i32 0, i32 4
  store i64 %46, i64* %48, align 8
  br label %49

49:                                               ; preds = %45, %41
  %50 = load i64, i64* @parsing_swallows, align 8
  %51 = icmp ne i64 %50, 0
  br i1 %51, label %60, label %52

52:                                               ; preds = %49
  %53 = load i32, i32* @last_key, align 4
  %54 = call i64 @strcasecmp(i32 %53, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.6, i64 0, i64 0))
  %55 = icmp eq i64 %54, 0
  br i1 %55, label %56, label %60

56:                                               ; preds = %52
  %57 = load i64, i64* %4, align 8
  %58 = load %struct.TYPE_7__*, %struct.TYPE_7__** @json_node, align 8
  %59 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %58, i32 0, i32 5
  store i64 %57, i64* %59, align 8
  br label %60

60:                                               ; preds = %56, %52, %49
  %61 = load i64, i64* @parsing_focus, align 8
  %62 = icmp ne i64 %61, 0
  br i1 %62, label %63, label %71

63:                                               ; preds = %60
  %64 = call %struct.focus_mapping* @scalloc(i32 1, i32 8)
  store %struct.focus_mapping* %64, %struct.focus_mapping** %5, align 8
  %65 = load i64, i64* %4, align 8
  %66 = load %struct.focus_mapping*, %struct.focus_mapping** %5, align 8
  %67 = getelementptr inbounds %struct.focus_mapping, %struct.focus_mapping* %66, i32 0, i32 0
  store i64 %65, i64* %67, align 8
  %68 = load %struct.focus_mapping*, %struct.focus_mapping** %5, align 8
  %69 = load i32, i32* @focus_mappings, align 4
  %70 = call i32 @TAILQ_INSERT_TAIL(i32* @focus_mappings, %struct.focus_mapping* %68, i32 %69)
  br label %71

71:                                               ; preds = %63, %60
  %72 = load i64, i64* @parsing_rect, align 8
  %73 = icmp ne i64 %72, 0
  br i1 %73, label %80, label %74

74:                                               ; preds = %71
  %75 = load i64, i64* @parsing_window_rect, align 8
  %76 = icmp ne i64 %75, 0
  br i1 %76, label %80, label %77

77:                                               ; preds = %74
  %78 = load i64, i64* @parsing_geometry, align 8
  %79 = icmp ne i64 %78, 0
  br i1 %79, label %80, label %148

80:                                               ; preds = %77, %74, %71
  %81 = load i64, i64* @parsing_rect, align 8
  %82 = icmp ne i64 %81, 0
  br i1 %82, label %83, label %86

83:                                               ; preds = %80
  %84 = load %struct.TYPE_7__*, %struct.TYPE_7__** @json_node, align 8
  %85 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %84, i32 0, i32 9
  store %struct.TYPE_6__* %85, %struct.TYPE_6__** %6, align 8
  br label %96

86:                                               ; preds = %80
  %87 = load i64, i64* @parsing_window_rect, align 8
  %88 = icmp ne i64 %87, 0
  br i1 %88, label %89, label %92

89:                                               ; preds = %86
  %90 = load %struct.TYPE_7__*, %struct.TYPE_7__** @json_node, align 8
  %91 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %90, i32 0, i32 8
  store %struct.TYPE_6__* %91, %struct.TYPE_6__** %6, align 8
  br label %95

92:                                               ; preds = %86
  %93 = load %struct.TYPE_7__*, %struct.TYPE_7__** @json_node, align 8
  %94 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %93, i32 0, i32 7
  store %struct.TYPE_6__* %94, %struct.TYPE_6__** %6, align 8
  br label %95

95:                                               ; preds = %92, %89
  br label %96

96:                                               ; preds = %95, %83
  %97 = load i32, i32* @last_key, align 4
  %98 = call i64 @strcasecmp(i32 %97, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.7, i64 0, i64 0))
  %99 = icmp eq i64 %98, 0
  br i1 %99, label %100, label %104

100:                                              ; preds = %96
  %101 = load i64, i64* %4, align 8
  %102 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %103 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %102, i32 0, i32 0
  store i64 %101, i64* %103, align 8
  br label %134

104:                                              ; preds = %96
  %105 = load i32, i32* @last_key, align 4
  %106 = call i64 @strcasecmp(i32 %105, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str.8, i64 0, i64 0))
  %107 = icmp eq i64 %106, 0
  br i1 %107, label %108, label %112

108:                                              ; preds = %104
  %109 = load i64, i64* %4, align 8
  %110 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %111 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %110, i32 0, i32 1
  store i64 %109, i64* %111, align 8
  br label %133

112:                                              ; preds = %104
  %113 = load i32, i32* @last_key, align 4
  %114 = call i64 @strcasecmp(i32 %113, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.9, i64 0, i64 0))
  %115 = icmp eq i64 %114, 0
  br i1 %115, label %116, label %120

116:                                              ; preds = %112
  %117 = load i64, i64* %4, align 8
  %118 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %119 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %118, i32 0, i32 2
  store i64 %117, i64* %119, align 8
  br label %132

120:                                              ; preds = %112
  %121 = load i32, i32* @last_key, align 4
  %122 = call i64 @strcasecmp(i32 %121, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.10, i64 0, i64 0))
  %123 = icmp eq i64 %122, 0
  br i1 %123, label %124, label %128

124:                                              ; preds = %120
  %125 = load i64, i64* %4, align 8
  %126 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %127 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %126, i32 0, i32 3
  store i64 %125, i64* %127, align 8
  br label %131

128:                                              ; preds = %120
  %129 = load i32, i32* @last_key, align 4
  %130 = call i32 @ELOG(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.11, i64 0, i64 0), i32 %129)
  br label %131

131:                                              ; preds = %128, %124
  br label %132

132:                                              ; preds = %131, %116
  br label %133

133:                                              ; preds = %132, %108
  br label %134

134:                                              ; preds = %133, %100
  %135 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %136 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %135, i32 0, i32 0
  %137 = load i64, i64* %136, align 8
  %138 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %139 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %138, i32 0, i32 1
  %140 = load i64, i64* %139, align 8
  %141 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %142 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %141, i32 0, i32 2
  %143 = load i64, i64* %142, align 8
  %144 = load %struct.TYPE_6__*, %struct.TYPE_6__** %6, align 8
  %145 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %144, i32 0, i32 3
  %146 = load i64, i64* %145, align 8
  %147 = call i32 @DLOG(i8* getelementptr inbounds ([28 x i8], [28 x i8]* @.str.12, i64 0, i64 0), i64 %137, i64 %140, i64 %143, i64 %146)
  br label %148

148:                                              ; preds = %134, %77
  %149 = load i64, i64* @parsing_swallows, align 8
  %150 = icmp ne i64 %149, 0
  br i1 %150, label %151, label %176

151:                                              ; preds = %148
  %152 = load i32, i32* @last_key, align 4
  %153 = call i64 @strcasecmp(i32 %152, i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.6, i64 0, i64 0))
  %154 = icmp eq i64 %153, 0
  br i1 %154, label %155, label %159

155:                                              ; preds = %151
  %156 = load i64, i64* %4, align 8
  %157 = load %struct.TYPE_8__*, %struct.TYPE_8__** @current_swallow, align 8
  %158 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %157, i32 0, i32 0
  store i64 %156, i64* %158, align 8
  store i32 0, i32* @swallow_is_empty, align 4
  br label %159

159:                                              ; preds = %155, %151
  %160 = load i32, i32* @last_key, align 4
  %161 = call i64 @strcasecmp(i32 %160, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.13, i64 0, i64 0))
  %162 = icmp eq i64 %161, 0
  br i1 %162, label %163, label %167

163:                                              ; preds = %159
  %164 = load i64, i64* %4, align 8
  %165 = load %struct.TYPE_8__*, %struct.TYPE_8__** @current_swallow, align 8
  %166 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %165, i32 0, i32 1
  store i64 %164, i64* %166, align 8
  store i32 0, i32* @swallow_is_empty, align 4
  br label %167

167:                                              ; preds = %163, %159
  %168 = load i32, i32* @last_key, align 4
  %169 = call i64 @strcasecmp(i32 %168, i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.14, i64 0, i64 0))
  %170 = icmp eq i64 %169, 0
  br i1 %170, label %171, label %175

171:                                              ; preds = %167
  %172 = load i64, i64* %4, align 8
  %173 = load %struct.TYPE_8__*, %struct.TYPE_8__** @current_swallow, align 8
  %174 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %173, i32 0, i32 2
  store i64 %172, i64* %174, align 8
  store i32 0, i32* @swallow_is_empty, align 4
  br label %175

175:                                              ; preds = %171, %167
  br label %176

176:                                              ; preds = %175, %148
  %177 = load i64, i64* @parsing_gaps, align 8
  %178 = icmp ne i64 %177, 0
  br i1 %178, label %179, label %229

179:                                              ; preds = %176
  %180 = load i32, i32* @last_key, align 4
  %181 = call i64 @strcasecmp(i32 %180, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.15, i64 0, i64 0))
  %182 = icmp eq i64 %181, 0
  br i1 %182, label %183, label %188

183:                                              ; preds = %179
  %184 = load i64, i64* %4, align 8
  %185 = load %struct.TYPE_7__*, %struct.TYPE_7__** @json_node, align 8
  %186 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %185, i32 0, i32 6
  %187 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %186, i32 0, i32 0
  store i64 %184, i64* %187, align 8
  br label %228

188:                                              ; preds = %179
  %189 = load i32, i32* @last_key, align 4
  %190 = call i64 @strcasecmp(i32 %189, i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.16, i64 0, i64 0))
  %191 = icmp eq i64 %190, 0
  br i1 %191, label %192, label %197

192:                                              ; preds = %188
  %193 = load i64, i64* %4, align 8
  %194 = load %struct.TYPE_7__*, %struct.TYPE_7__** @json_node, align 8
  %195 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %194, i32 0, i32 6
  %196 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %195, i32 0, i32 1
  store i64 %193, i64* %196, align 8
  br label %227

197:                                              ; preds = %188
  %198 = load i32, i32* @last_key, align 4
  %199 = call i64 @strcasecmp(i32 %198, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.17, i64 0, i64 0))
  %200 = icmp eq i64 %199, 0
  br i1 %200, label %201, label %206

201:                                              ; preds = %197
  %202 = load i64, i64* %4, align 8
  %203 = load %struct.TYPE_7__*, %struct.TYPE_7__** @json_node, align 8
  %204 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %203, i32 0, i32 6
  %205 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %204, i32 0, i32 2
  store i64 %202, i64* %205, align 8
  br label %226

206:                                              ; preds = %197
  %207 = load i32, i32* @last_key, align 4
  %208 = call i64 @strcasecmp(i32 %207, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str.18, i64 0, i64 0))
  %209 = icmp eq i64 %208, 0
  br i1 %209, label %210, label %215

210:                                              ; preds = %206
  %211 = load i64, i64* %4, align 8
  %212 = load %struct.TYPE_7__*, %struct.TYPE_7__** @json_node, align 8
  %213 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %212, i32 0, i32 6
  %214 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %213, i32 0, i32 3
  store i64 %211, i64* %214, align 8
  br label %225

215:                                              ; preds = %206
  %216 = load i32, i32* @last_key, align 4
  %217 = call i64 @strcasecmp(i32 %216, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.19, i64 0, i64 0))
  %218 = icmp eq i64 %217, 0
  br i1 %218, label %219, label %224

219:                                              ; preds = %215
  %220 = load i64, i64* %4, align 8
  %221 = load %struct.TYPE_7__*, %struct.TYPE_7__** @json_node, align 8
  %222 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %221, i32 0, i32 6
  %223 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %222, i32 0, i32 4
  store i64 %220, i64* %223, align 8
  br label %224

224:                                              ; preds = %219, %215
  br label %225

225:                                              ; preds = %224, %210
  br label %226

226:                                              ; preds = %225, %201
  br label %227

227:                                              ; preds = %226, %192
  br label %228

228:                                              ; preds = %227, %183
  br label %229

229:                                              ; preds = %228, %176
  ret i32 1
}

declare dso_local i32 @LOG(i8*, i64, i32) #1

declare dso_local i64 @strcasecmp(i32, i8*) #1

declare dso_local %struct.focus_mapping* @scalloc(i32, i32) #1

declare dso_local i32 @TAILQ_INSERT_TAIL(i32*, %struct.focus_mapping*, i32) #1

declare dso_local i32 @ELOG(i8*, i32) #1

declare dso_local i32 @DLOG(i8*, i64, i64, i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
